--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -3,19 +3,19 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full-width-pics/blob/master/LICENSE)
  */
- body {
+ body{
   padding-top: 56px;
   /* background-color:#eaedf1; */
   background-image:radial-gradient(white, white);
   text-align: center;
-
-  /* background-color: #ffffff; */
 }
+
 #pseudo{
   color: beige;
   font-weight:bold;
   font-size: 15px;
 }
+
 .title-post{
   text-shadow: 2px 2px 7px #000000;
 }
@@ -27,18 +27,16 @@
   background-size: cover;
   -o-background-size: cover;
 }
-.container-fluid{
+/* .container-fluid{
 
 padding-right: 0px;
 padding-left: 0px;
-}
+} */
 
-#headerwrap {
+#headerwrap{
   background: url(../images/series-US.jpg) no-repeat center top;
-  /* background: url(../img/header-bg.jpg) no-repeat center top; */
   margin-top: 50px;
   padding-top: 0px;
-  /* background-attachment: relative; */
   background-attachment: fixed; 
   background-position: center center;
   min-height: 500px;
@@ -53,15 +51,14 @@ padding-left: 0px;
   background-size: cover;
 }
 
-#headerwrap h2 {
+#headerwrap h2{
   color: white;
   font-weight:bold;
   font-size: 70px;
-  font-weight: 500;
   letter-spacing: 2px;
   text-transform: uppercase;
-  
 }
+
 .presentation{
   background: url(https://images.unsplash.com/photo-1512070853659-f08f0efae470?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjF9&auto=format&fit=crop&w=600&q=60) no-repeat center center;
   background-size: cover;
@@ -76,7 +73,7 @@ padding-left: 0px;
     font-size: 50px;
   }
 
-  #headerwrap h2 {
+  #headerwrap h2{
     font-size: 30px;
   }
 }
@@ -84,29 +81,34 @@ padding-left: 0px;
 p{
 text-align: justify;
 }
-h1, h2, h3 {
+
+h1,h2,h3{
   font-family: 'Share Tech Mono', sans-serif;
   font-weight: bold;
 }
-h4, h5, h6 {
+h4,h5,h6{
   font-family: 'Share Tech Mono', sans-serif;
   font-weight: bold;
 }
+
 h1.title-post{
   text-align: center;
 }
 
-#img_blog {
+#img_blog{
   width: 200px;
   height: 200px;
 }
-#img_blog_admin {
+
+#img_blog_admin{
   width: 50px;
   height: 50px;
 }
+
 .admin-bloc1{
   padding-left: 10px;
 }
+
 .admin-bloc2{
   margin-right: auto;
   margin-left: auto;
@@ -115,6 +117,7 @@ h1.title-post{
 .flux{
   color: blueviolet;
 }
+
 ul.list-group{
   margin-bottom: 35px;
   font-size: smaller;
@@ -212,9 +215,11 @@ text-align:left; font-size: 14px; color: #000000;
     color: blue;
     margin-top: 4%;
 }
+
 .register .nav-tabs .nav-link:hover{
     border: none;
 }
+
 .text-align{
     margin-top: -3%;
     margin-bottom: -9%;
@@ -222,20 +227,24 @@ text-align:left; font-size: 14px; color: #000000;
     padding: 10%;
     margin-left: 30%;
 }
+
 .form-new{
     margin-right: 22%;
     margin-left: 20%;
 }
+
 .register-heading{
     margin-left: 21%;
     margin-bottom: 10%;
     color: #e9ecef;
 }
+
 .register-heading h1{
     margin-left: 21%;
     margin-bottom: 10%;
     color: #e9ecef;
 }
+
 .btnLoginSubmit{
     border: none;
     padding: 2%;
@@ -244,17 +253,20 @@ text-align:left; font-size: 14px; color: #000000;
     background: #29abe2;
     color: #fff;
 }
+
 .btnForgetPwd{
     cursor: pointer;
     margin-right: 5%;
     color: #f8f9fa;
 }
+
 .register{
     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
     margin-top: 3%;
     padding: 3%;
     border-radius: 2.5rem;
 }
+
 .nav-tabs .nav-link{
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
