--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -5,7 +5,6 @@
  */
  body{
   padding-top: 56px;
-  /* background-color:#eaedf1; */
   background-image:radial-gradient(white, white);
   text-align: center;
 }
@@ -36,8 +35,7 @@ padding-left: 0px;
 #headerwrap{
   background: url(../images/series-US.jpg) no-repeat center top;
   margin-top: 50px;
-  padding-top: 0px;
-  background-attachment: fixed; 
+  background-attachment: fixed;
   background-position: center center;
   min-height: 500px;
   width: 100%;
@@ -45,10 +43,6 @@ padding-left: 0px;
   -moz-background-size: 100%;
   -o-background-size: 100%;
   background-size: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 
 #headerwrap h2{
@@ -68,8 +62,8 @@ padding-left: 0px;
   color: white;
 }
 
-@media (max-width: 768px ) {
-  #headerwrap h1 {
+@media (max-width: 768px){
+  #headerwrap h1{
     font-size: 50px;
   }
 
@@ -82,11 +76,11 @@ p{
 text-align: justify;
 }
 
-h1,h2,h3{
+h1,h2,h3 {
   font-family: 'Share Tech Mono', sans-serif;
   font-weight: bold;
 }
-h4,h5,h6{
+h4,h5,h6 {
   font-family: 'Share Tech Mono', sans-serif;
   font-weight: bold;
 }
@@ -134,7 +128,6 @@ ul.list-group{
 .circle{
   width: 200px;
   height: 200px;
-  /* background: url(https://fr.web.img5.acsta.net/c_216_288/pictures/19/10/29/09/05/3954913.jpg); */
   background-size: 100% 100%;
   border-radius: 50%;
   float: left;
@@ -142,7 +135,7 @@ ul.list-group{
   margin: 20px;
 }
 
-.kek{
+/* .kek{
   text-shadow:0 1px 0 #ccc, 
   0 2px 0 #c9c9c9,
   0 3px 0 #bbb,
@@ -158,7 +151,7 @@ ul.list-group{
   background-color:#2E8ECE;
   margin-top: 10px;
   font-size: 18px;
-}
+} */
 
 #block{
 padding-top: 56px;
