--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -3,19 +3,19 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full-width-pics/blob/master/LICENSE)
  */
- body{
+body{
   padding-top: 56px;
-  background-image:radial-gradient(white, white);
+  background-image: radial-gradient(white, white);
   text-align: center;
 }
 
-#pseudo{
+#pseudo {
   color: beige;
-  font-weight:bold;
+  font-weight: bold;
   font-size: 15px;
 }
 
-.title-post{
+.title-post {
   text-shadow: 2px 2px 7px #000000;
 }
 
@@ -32,7 +32,7 @@ padding-right: 0px;
 padding-left: 0px;
 } */
 
-#headerwrap{
+#headerwrap {
   background: url(../images/series-US.jpg) no-repeat center top;
   margin-top: 50px;
   background-attachment: fixed;
@@ -45,7 +45,7 @@ padding-left: 0px;
   background-size: 100%;
 }
 
-#headerwrap h2{
+#headerwrap h2 {
   color: white;
   font-weight:bold;
   font-size: 70px;
@@ -53,27 +53,27 @@ padding-left: 0px;
   text-transform: uppercase;
 }
 
-.presentation{
+.presentation {
   background: url(https://images.unsplash.com/photo-1512070853659-f08f0efae470?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjF9&auto=format&fit=crop&w=600&q=60) no-repeat center center;
   background-size: cover;
 }
 
-.hero-unit{
+.hero-unit {
   color: white;
 }
 
-@media (max-width: 768px){
+@media (max-width: 768px) {
   #headerwrap h1{
     font-size: 50px;
   }
 
-  #headerwrap h2{
+  #headerwrap h2 {
     font-size: 30px;
   }
 }
 
-p{
-text-align: justify;
+p {
+  text-align: justify;
 }
 
 h1,h2,h3 {
@@ -85,47 +85,47 @@ h4,h5,h6 {
   font-weight: bold;
 }
 
-h1.title-post{
+h1.title-post {
   text-align: center;
 }
 
-#img_blog{
+#img_blog {
   width: 200px;
   height: 200px;
 }
 
-#img_blog_admin{
+#img_blog_admin {
   width: 50px;
   height: 50px;
 }
 
-.admin-bloc1{
+.admin-bloc1 {
   padding-left: 10px;
 }
 
-.admin-bloc2{
+.admin-bloc2 {
   margin-right: auto;
   margin-left: auto;
 }
 
-.flux{
+.flux {
   color: blueviolet;
 }
 
-ul.list-group{
+ul.list-group {
   margin-bottom: 35px;
   font-size: smaller;
   text-align: left;
 }
 
-.jmi{
+.jmi {
   padding: 30px;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: 0 10px 50px rgba(0,0,0,.2);
 }
 
-.circle{
+.circle {
   width: 200px;
   height: 200px;
   background-size: 100% 100%;
@@ -153,40 +153,42 @@ ul.list-group{
   font-size: 18px;
 } */
 
-#block{
+#block {
 padding-top: 56px;
 }
 
 /* footer */
-#footer-jmi{
-  font-family:georgia, serif;
-  margin-bottom:10px;
+#footer-jmi {
+  font-family: georgia, serif;
+  margin-bottom: 10px;
   font-size : 15px;
   color : white;
 }
 
-.lead{
+.lead {
   font-weight: bold;
 }
 
-tbody{
-text-align:left; font-size: 14px; color: #000000;
+tbody {
+  text-align: left; 
+  font-size: 14px; 
+  color: #000000;
 }
 
-.test{
-  background-color :white;
+.test {
+  background-color : white;
   /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
 }
-.content{
-  background-color :white;
+.content {
+  background-color : white;
   /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
 }
 
-.marvin{
+.marvin {
   padding-top: 30px;
   background-color: rgba(245, 230, 230, 0.71);
 }
-.comment{
+.comment {
   margin-bottom: -30px
 }
 
@@ -209,11 +211,11 @@ text-align:left; font-size: 14px; color: #000000;
     margin-top: 4%;
 }
 
-.register .nav-tabs .nav-link:hover{
+.register .nav-tabs .nav-link:hover {
     border: none;
 }
 
-.text-align{
+.text-align {
     margin-top: -3%;
     margin-bottom: -9%;
 
@@ -221,24 +223,24 @@ text-align:left; font-size: 14px; color: #000000;
     margin-left: 30%;
 }
 
-.form-new{
+.form-new {
     margin-right: 22%;
     margin-left: 20%;
 }
 
-.register-heading{
+.register-heading {
     margin-left: 21%;
     margin-bottom: 10%;
     color: #e9ecef;
 }
 
-.register-heading h1{
+.register-heading h1 {
     margin-left: 21%;
     margin-bottom: 10%;
     color: #e9ecef;
 }
 
-.btnLoginSubmit{
+.btnLoginSubmit {
     border: none;
     padding: 2%;
     width: 25%;
@@ -247,20 +249,20 @@ text-align:left; font-size: 14px; color: #000000;
     color: #fff;
 }
 
-.btnForgetPwd{
+.btnForgetPwd {
     cursor: pointer;
     margin-right: 5%;
     color: #f8f9fa;
 }
 
-.register{
+.register {
     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
     margin-top: 3%;
     padding: 3%;
     border-radius: 2.5rem;
 }
 
-.nav-tabs .nav-link{
+.nav-tabs .nav-link {
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
