--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,9 +1,4 @@
-/*!
- * Start Bootstrap - Full Width Pics (https://startbootstrap.com/template-overviews/full-width-pics)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full-width-pics/blob/master/LICENSE)
- */
-body{
+body {
   padding-top: 56px;
   background-image: radial-gradient(white, white);
   text-align: center;
@@ -26,11 +21,6 @@ body{
   background-size: cover;
   -o-background-size: cover;
 }
-/* .container-fluid{
-
-padding-right: 0px;
-padding-left: 0px;
-} */
 
 #headerwrap {
   background: url(../images/series-US.jpg) no-repeat center top;
@@ -47,7 +37,7 @@ padding-left: 0px;
 
 #headerwrap h2 {
   color: white;
-  font-weight:bold;
+  font-weight: bold;
   font-size: 70px;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -63,10 +53,9 @@ padding-left: 0px;
 }
 
 @media (max-width: 768px) {
-  #headerwrap h1{
+  #headerwrap h1 {
     font-size: 50px;
   }
-
   #headerwrap h2 {
     font-size: 30px;
   }
@@ -76,11 +65,12 @@ p {
   text-align: justify;
 }
 
-h1,h2,h3 {
+h1, h2, h3 {
   font-family: 'Share Tech Mono', sans-serif;
   font-weight: bold;
 }
-h4,h5,h6 {
+
+h4, h5, h6 {
   font-family: 'Share Tech Mono', sans-serif;
   font-weight: bold;
 }
@@ -122,7 +112,7 @@ ul.list-group {
   padding: 30px;
   box-sizing: border-box;
   border-radius: 10px;
-  box-shadow: 0 10px 50px rgba(0,0,0,.2);
+  box-shadow: 0px 10px 50px rgba(0, 0, 0, .2);
 }
 
 .circle {
@@ -135,34 +125,17 @@ ul.list-group {
   margin: 20px;
 }
 
-/* .kek{
-  text-shadow:0 1px 0 #ccc, 
-  0 2px 0 #c9c9c9,
-  0 3px 0 #bbb,
-  0 4px 0 #b9b9b9,
-  0 5px 0 #aaa,
-  0 6px 1px rgba(0,0,0,.1),
-  0 0 5px rgba(0,0,0,.1),
-  0 1px 3px rgba(0,0,0,.3),
-  0 3px 5px rgba(0,0,0,.2),
-  0 5px 10px rgba(0,0,0,.25),
-  0 10px 10px rgba(0,0,0,.2),
-  0 20px 20px rgba(0,0,0,.15);color:#fff;
-  background-color:#2E8ECE;
-  margin-top: 10px;
-  font-size: 18px;
-} */
-
 #block {
-padding-top: 56px;
+  padding-top: 56px;
 }
 
 /* footer */
+
 #footer-jmi {
   font-family: georgia, serif;
   margin-bottom: 10px;
-  font-size : 15px;
-  color : white;
+  font-size: 15px;
+  color: white;
 }
 
 .lead {
@@ -170,101 +143,82 @@ padding-top: 56px;
 }
 
 tbody {
-  text-align: left; 
-  font-size: 14px; 
+  text-align: left;
+  font-size: 14px;
   color: #000000;
 }
 
 .test {
-  background-color : white;
+  background-color: white;
   /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
 }
+
 .content {
-  background-color : white;
-  /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
+  background-color: white;
 }
 
 .marvin {
   padding-top: 30px;
   background-color: rgba(245, 230, 230, 0.71);
 }
+
 .comment {
   margin-bottom: -30px
 }
 
-/*
-*
-*form style
-*/
-.btnContactSubmit
-{
-    width: 50%;
-    border-radius: 1rem;
-    padding: 1.5%;
-    color: #fff;
-    background-color: #0062cc;
-    border: none;
-    cursor: pointer;
-    margin-right: 6%;
-    background-color: white;
-    color: blue;
-    margin-top: 4%;
-}
-
 .register .nav-tabs .nav-link:hover {
-    border: none;
+  border: none;
 }
 
 .text-align {
-    margin-top: -3%;
-    margin-bottom: -9%;
-
-    padding: 10%;
-    margin-left: 30%;
+  margin-top: -3%;
+  margin-bottom: -9%;
+  padding: 10%;
+  margin-left: 30%;
 }
 
 .form-new {
-    margin-right: 22%;
-    margin-left: 20%;
+  margin-right: 22%;
+  margin-left: 20%;
 }
 
 .register-heading {
-    margin-left: 21%;
-    margin-bottom: 10%;
-    color: #e9ecef;
+  margin-left: 21%;
+  margin-bottom: 10%;
+  color: #e9ecef;
 }
 
 .register-heading h1 {
-    margin-left: 21%;
-    margin-bottom: 10%;
-    color: #e9ecef;
+  margin-left: 21%;
+  margin-bottom: 10%;
+  color: #e9ecef;
 }
 
 .btnLoginSubmit {
-    border: none;
-    padding: 2%;
-    width: 25%;
-    cursor: pointer;
-    background: #29abe2;
-    color: #fff;
+  border: none;
+  padding: 2%;
+  width: 25%;
+  cursor: pointer;
+  background: #29abe2;
+  color: #fff;
 }
 
 .btnForgetPwd {
-    cursor: pointer;
-    margin-right: 5%;
-    color: #f8f9fa;
+  cursor: pointer;
+  margin-right: 5%;
+  color: #f8f9fa;
 }
 
 .register {
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-    margin-top: 3%;
-    padding: 3%;
-    border-radius: 2.5rem;
+  background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+  margin-top: 3%;
+  padding: 3%;
+  border-radius: 2.5rem;
 }
 
 .nav-tabs .nav-link {
-    border: 1px solid transparent;
-    border-top-left-radius: .25rem;
-    border-top-right-radius: .25rem;
-    color: white;
+  border: 1px solid transparent;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+  color: white;
 }
