--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -35,14 +35,6 @@ body {
   background-size: 100%;
 }
 
-#headerwrap h2 {
-  color: white;
-  font-weight: bold;
-  font-size: 70px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
 .presentation {
   background: url(https://images.unsplash.com/photo-1512070853659-f08f0efae470?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjF9&auto=format&fit=crop&w=600&q=60) no-repeat center center;
   background-size: cover;
@@ -112,7 +104,7 @@ ul.list-group {
   padding: 30px;
   box-sizing: border-box;
   border-radius: 10px;
-  box-shadow: 0px 10px 50px rgba(0, 0, 0, .2);
+  box-shadow: 0 10px 50px rgba(0, 0, 0, .2);
 }
 
 .circle {
@@ -142,12 +134,6 @@ ul.list-group {
   font-weight: bold;
 }
 
-tbody {
-  text-align: left;
-  font-size: 14px;
-  color: #000000;
-}
-
 .test {
   background-color: white;
   /* background: url(https://images.unsplash.com/photo-1572188863110-46d457c9234d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
@@ -163,12 +149,12 @@ tbody {
 }
 
 .comment {
-  margin-bottom: -30px
+  margin-bottom: -30px;
 }
 
-.register .nav-tabs .nav-link:hover {
+/* .register .nav-tabs .nav-link:hover {
   border: none;
-}
+} */
 
 .text-align {
   margin-top: -3%;
@@ -216,9 +202,9 @@ tbody {
   border-radius: 2.5rem;
 }
 
-.nav-tabs .nav-link {
+/* .nav-tabs .nav-link {
   border: 1px solid transparent;
   border-top-left-radius: .25rem;
   border-top-right-radius: .25rem;
   color: white;
-}
+} */
